{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 41,
  "lineage": "8a87b023-4cbd-96c7-3547-b0c133bd598e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "monitored_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-df5de72bdb3b",
            "arn": "arn:aws:ec2:us-east-1::instance/i-cc1ae6f3ec42aec04",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-cc1ae6f3ec42aec04",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "monitored-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-1054e909a0f81ef53",
            "private_dns": "ip-10-20-1-5.ec2.internal",
            "private_ip": "10.20.1.5",
            "public_dns": "ec2-172-24-0-3.localhost.localstack.cloud",
            "public_ip": "172.24.0.3",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-b5b1009b9c0f677f4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-484f17d0c55e0878b",
            "tags": {
              "Name": "MonitoredEC2"
            },
            "tags_all": {
              "Name": "MonitoredEC2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0559195122a874ee2"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.monitored_key",
            "aws_security_group.monitored_sg",
            "aws_subnet.monitored_public_subnet",
            "aws_vpc.monitored_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "monitored_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:internet-gateway/igw-49635be2f0a9bfd89",
            "id": "igw-49635be2f0a9bfd89",
            "owner_id": "000000000000",
            "tags": {
              "Name": "MonitoredIGW"
            },
            "tags_all": {
              "Name": "MonitoredIGW"
            },
            "vpc_id": "vpc-9c28d4365309abcf9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.monitored_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "monitored_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:route-table/rtb-d9e4ac76424c1125e",
            "id": "rtb-d9e4ac76424c1125e",
            "owner_id": "000000000000",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-49635be2f0a9bfd89",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "MonitoredPublicRouteTable"
            },
            "tags_all": {
              "Name": "MonitoredPublicRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-9c28d4365309abcf9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.monitored_igw",
            "aws_vpc.monitored_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "monitored_public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-2f0d9d3f0b29cf16e",
            "route_table_id": "rtb-d9e4ac76424c1125e",
            "subnet_id": "subnet-484f17d0c55e0878b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.monitored_igw",
            "aws_route_table.monitored_public_rt",
            "aws_subnet.monitored_public_subnet",
            "aws_vpc.monitored_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "monitored_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:security-group/sg-0559195122a874ee2",
            "description": "Allow SSH and ICMP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0559195122a874ee2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ICMP",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "monitored-ec2-sg",
            "name_prefix": "",
            "owner_id": "000000000000",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "MonitoredEC2SG"
            },
            "tags_all": {
              "Name": "MonitoredEC2SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-9c28d4365309abcf9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.monitored_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "monitored_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:subnet/subnet-484f17d0c55e0878b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-484f17d0c55e0878b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "000000000000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "MonitoredPublicSubnet"
            },
            "tags_all": {
              "Name": "MonitoredPublicSubnet"
            },
            "vpc_id": "vpc-9c28d4365309abcf9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.monitored_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "monitored_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:vpc/vpc-9c28d4365309abcf9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-44576e900f4d70b8e",
            "default_route_table_id": "rtb-c3de537acf36b7ada",
            "default_security_group_id": "sg-f122420f183f37e08",
            "dhcp_options_id": "default",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-9c28d4365309abcf9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-c3de537acf36b7ada",
            "owner_id": "000000000000",
            "tags": {
              "Name": "MonitoredVPC"
            },
            "tags_all": {
              "Name": "MonitoredVPC"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}